--- a/selected-work.html
+++ b/selected-work.html
@@ -109,6 +109,14 @@
 				</div>
 			</a>
 			
+			<a class="project" aria-label="Optical Flow and Object Tracking for Robots" href="marbleflow.html">
+				<img src="selected-work/marbleflow.jpg" alt="Robot arm holding a tennis ball">
+				<div class="proj-overlay">
+					<div class="hashtags">#computer-vision #robotics</div>
+					<h2>Optical Flow and Object Tracking for Robots</h2>
+				</div>
+			</a>
+			
 			<a class="project" aria-label="Nondestructive Testing" href="ndte.html">
 				<img src="selected-work/ndte.jpg" alt="Aluminum fastened in an acoustic experimental apparatus">
 				<div class="proj-overlay">
@@ -160,7 +168,7 @@
 	</main>
 
 	<footer>
-		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>© 2018–2023 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a><br>© 2018–2024 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br>Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
 	</footer>
 </body>
 </html>
