--- a/business-card.html
+++ b/business-card.html
@@ -43,7 +43,7 @@
 	<header>
 		<img alt="Renewvia Logo" src="business-card/rsa-logo.png">
 		<div id="name">Nicholas Selby</div>
-		<div id="job">Director of Engineering at Renewvia</div>
+		<div id="job">VP of Engineering at Renewvia</div>
 	</header>
 
 	<main>
