--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<img id="headshot" src="homepage/headshot.jpg" alt="My professional headshot">
 			<div id="title-card-right">
 				<div>
-					<p>Director of Engineering at Renewvia</p>
+					<p>Vice President of Engineering at Renewvia</p>
 					<p>PhD in Electrical Engineering and Computer Science, MIT</p>
 					<address>Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></address>
 				</div>
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="bio" class="section">
-			I am the Director of Engineering at Renewvia Energy. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar mini-grids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
+			I am the VP of Engineering at Renewvia Energy. I am responsible for the design, procurement, construction, productive use, and software infrastructure of solar mini-grids in rural Kenya and Nigeria. I have a B.S. in Mechanical Engineering from the Georgia Institute of Technology, an M.S. in Mechanical Engineering from MIT, and a Ph.D. in Electrical Engineering and Computer Science from MIT. I have worked as a research engineer for NASA's Jet Propulsion Laboratory and Sandia National Laboratories.
 		</div>
 
 		<section id="publications">
