kenya guide edits

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -106,7 +106,7 @@
 
 		<section id="Housing">
 			<h2>Housing</h2>
-			<p>Facebook groups are a great tool to find housing. Avoid the Kenya Craigslist. It is traumatizing.</p>
+			<p>Facebook groups are a great tool to find housing. Avoid the Kenya Craigslist.</p>
 
 			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
@@ -163,7 +163,8 @@
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
-				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite coworking cafe</li>
+				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite outdoor coworking cafe</li>
+				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/sMDM5bC7bGG427Hy9">Cheche Bookshop and Cafe</a>: my favorite indoor coworking cafe</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
@@ -386,7 +387,7 @@
 
 			<p>To get M-Pesa, go to a Safaricom store building with your physical passport, not a soft copy, and pay $1 for a Safaricom SIM card. When you insert the SIM card into your phone, you will need to unlock it with a special, four-digit SIM PIN provided by Safaricom on the plastic case containing the SIM card. Doing so will install an app on your phone labeled "Safaricom" or "SIM Toolkit." That app will allow you to activate your M-Pesa account and, optionally, deactivate your SIM PIN so you don't have to enter it whenever you turn on your phone.</p>
 
-			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit and Remitly, too.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a> for instant transfers and <a rel="external" target="_blank" href="">Remitly</a> for delayed transfers with better exchange rates.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
@@ -406,11 +407,11 @@
 
 		<section id="Phone">
 			<h2>Phone</h2>
-			<p>Phone numbers in a lot of countries around the world do something that we don't do in the U.S.: they always start with a 0 when called domestically, but that 0 drops off when a country code is added. For example, a phone number in Kenya is 0123456789. If you want to call that from any other country, you need to dial +254123456789. I strongly advise saving all phone numbers with their country codes. Dialing +254xxxxxxxxx from inside Kenya works the same as dialing 0xxxxxxxxx, and then you're never confused later when you're in some other country.</p>
+			<p>Phone numbers in a lot of countries around the world do something that we don't do in the U.S.: they always start with a 0 when called domestically, but that 0 drops off when a country code is added. For example, a phone number in Kenya is 0123456789. If you want to call that from any other country, you need to dial +254123456789. I advise saving all phone numbers with their country codes. Dialing +254xxxxxxxxx from inside Kenya works the same as dialing 0xxxxxxxxx, and then you're never confused later when you're in some other country.</p>
 
 			<p>In most of East Africa, phone numbers are 9 digits long plus either the preceding 0 or country code (+254, +250, etc).</p>
 
-			<p>There is a whole system that we use a lot called USSD. I've never seen it used in the U.S., though it does exist as an international standard. It's a free way to send data between your phone and the telco and it is used for everything over here. You activate it by calling a phone number that begins with a * and ends with a #. For example, I call *100# to pull up a menu about prepaid data packages that I can buy with my airtime. I usually use the official <a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a> and <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a> apps instead of USSD menus.</p>
+			<p>There is a whole system that we use a lot called <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Unstructured_Supplementary_Service_Data">USSD</a>. I've never seen it used in the U.S., though it does exist as an international standard. It's a free way to send data between your phone and the telco and it is used for everything over here. You activate it by calling a phone number that begins with a * and ends with a #. For example, I call *100# to pull up a menu about prepaid data packages that I can buy with my airtime. I usually use the official <a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a> and <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a> apps instead of USSD menus.</p>
 
 			<p>In Kenya, WhatsApp is ubiquitous among people with smartphones, but many people still use SMS and plain-old-telephone-service phone calls.</p>
 
@@ -420,7 +421,7 @@
 			<ul>
 				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a>: buying airtime and data</li>
 				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a>: mobile money</li>
-				<li><a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>: send money from your U.S. bank account to your M-Pesa wallet</li>
+				<li><a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a> and <a rel="external" target="_blank" href="">Remitly</a>: send money from your U.S. bank account to your M-Pesa wallet</li>
 				<li><a rel="external" target="_blank" href="https://www.whatsapp.com/download/">WhatsApp</a>: messaging and calling</li>
 				<li><a rel="external" target="_blank" href="https://bolt.eu/">Bolt</a>: rideshare app like Uber</li>
 				<li><a rel="external" target="_blank" href="https://lens.google/">Google Lens</a>: OCR and translator for written Kiswahili</li>
@@ -439,7 +440,7 @@
 			<ul>
 				<li>Motorcycle taxis are absolutely everywhere, inlcuding villages. They're called <b>"boda boda"</b> in Kenya and surrounding countries, and will take you anywhere for a few dollars or sometimes less. You can always get one by walking out to a street and waving one over. You can agree on a price ahead of time or play it cool and agree on the price afterwards as a bargaining tool, like "I already know the price so you can't overcharge me." In any case, figuring out a fair price for the journey isn't always easy, especially when you're new, so I encourage over-paying at first, then slowly learning how cheap things can be instead of arguing about dollars or cents. For example, if a boda-boda driver wants to charge you 400 shillings and you really feel like it could be 100 shillings, that's wild overcharging, but it's also only $2.25.</li>
 				<li>Rideshare apps like <b>Uber</b>, and similar alternatives called <b>Bolt</b> and <b>Little</b>, work the same way as they do anywhere. They have different branding for their different tiers, but they essentially boil down to motorcycle taxis, small cars, medium cars, vans and SUVs, and women-only cars. Many foreigners prefer using rideshare apps instead of boda bodas for safety, both from crime and from traffic accidents. Personally, I ride boda bodas everywhere because it skips the traffic, but it isn't as safe. Bolt and Little are usually cheaper than Uber, and they also give drivers a larger percentage of the trip price. Regardless of the app, you can choose to pay with card, cash, or M-Pesa, but sometimes drivers will only agree to take you if you pay with cash or M-Pesa because the apps won't give them immediate access to money they made with card payments.</li>
-				<li>Minibusses, or "<b>matatus</b>" and "<b>SACCOs</b>," are 15-passenger vans driven by crazy people that go from everywhere to everywhere. It feels very chaotic and informal, so it's a hard system to figure out. So hard, in fact, that <a rel="external" target="_blank" href="https://news.mit.edu/2015/digital-matatus-project-makes-invisible-visible-0826">it took researchers from the University of Nairobi, Columbia, and MIT years to map the matatu transportation network</a>. If you do figure matatus out, riding in one will cost you almost nothing.</li>
+				<li>Busses, also called "<b>matatus</b>" and "<b>SACCOs</b>," can refer to large busses or 15-passenger vans driven by crazy people that go from everywhere to everywhere. It feels very chaotic and informal, so it's a hard system to figure out. So hard, in fact, that <a rel="external" target="_blank" href="https://news.mit.edu/2015/digital-matatus-project-makes-invisible-visible-0826">it took researchers from the University of Nairobi, Columbia, and MIT years to map the matatu transportation network</a>. If you do figure matatus out, riding in one will cost you almost nothing.</li>
 			</ul>
 
 			<figure>
@@ -452,8 +453,7 @@
 			<ul>
 				<li>Kenya has a few <b>domestic airlines</b> which are generally safe and cheap. For example, living in Nairobi, you can get to the coast in 45 minutes for around $60. These airlines include Skyward, Jambojet, and Kenya Airways (also international). There are two airports in Nairobi, both of which do some domestic and some international, but in general <b>Jomo Kenyatta International Airport</b> is for international flights, and <b>Wilson Airport</b> is for domestic flights. Wilson is much closer to town, and security and check-in there are less of an ordeal, so if you're flying to the coast and choosing between similarly priced flights at these two airports, choose Wilson and enjoy your life.</li>
 				<li><b>Matatus</b> also go between towns and are generally the cheapest option. I sometimes ride these between towns.</li>
-				<li><b>Larger buses</b> are a nice compromise sometimes. You can sit more comfortably and often go more directly for only a little bit more money.</li>
-				<li><b>Kenya Railways</b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
+				<li><b><a rel="external" target="_blank" href="https://krc.co.ke/">Kenya Railways</a></b> is underrated. I use it to go back and forth to the coast. It's about $8 each way, or $30 if you ride first class, but most folks don't like it because it's about the same speed as Amtrak and takes a few hours. That said, you'll likely see giraffes, impalas, and other cool creatures out the window along the way.</li>
 			</ul>
 
 			<h3>Jomo Kenyatta International Airport (abbreviated JKIA or NBO)</h3>
@@ -493,7 +493,7 @@
 			<h2>Safety</h2>
 			<p>Ensuring personal safety and security is a crucial aspect when moving to Kenya as an American. That said, I have never felt in danger in Nairobi. As with any city, the key to staying safe is by staying alert and practicing good common sense.</p>
 
-			<p>The U.S. State Department has a mostly permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. In Nairobi, it is usually not safe to venture into <b>Eastleigh</b> or <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
+			<p>The U.S. State Department has a mostly permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. It is usually not safe to venture into <b>Eastleigh</b> or <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
 
 			<p>As a general rule, northern Kenya is less safe than southern Kenya. I'll give an overview of the relevant northern counties starting in West Pokot, the central county on the border with Uganda, and moving clockwise.</p>
 
@@ -503,7 +503,7 @@
 
 			<p><b>Samburu</b> and <b>Marsabit</b>, the two north-central counties adjacent to Lake Turkana, are famously beautiful, but take care when driving; police have struggled to control highwaymen in the region. I recommend bringing a burner phone and 10,000 KES, about $75, so that, if stopped, you can surrender some valuables without getting out of your vehicle.</p>
 
-			<p>I've never been to any of the counties bordering Somalia; the U.S. State Department prohibits travel there due to "kidnapping and terrorism."</p>
+			<p>I've never been to any of the counties bordering Somalia. The U.S. State Department prohibits travel there due to "kidnapping and terrorism."</p>
 
 			<p>The U.S. State Department also prohibits travel to several "Coastal Areas," but many of the coastal cities remain safe and wonderful vacation destinations. I'll talk about coastal travel advice in a later section.</p>
 		</section>
@@ -569,13 +569,13 @@
 			</figure>
 
 			<h3>Recreational Substances</h3>
-			<p>Miraa, also known as khat, is a legal stimulant commonly used in East Africa. The leaves are typically chewed during casual social gatherings for their mild euphoric and stimulating effects. Tobacco, alcohol, and caffeine consumption are also common.</p>
+			<p>Miraa, also known as jaba and khat, is a legal stimulant commonly used in East Africa. The leaves are typically chewed during casual social gatherings for their mild euphoric and stimulating effects. Tobacco, alcohol, and caffeine consumption are also common.</p>
 
 			<p>The use, possession, and distribution of most recreational drugs are illegal in Kenya. These substances are classified as controlled or illegal substances under Kenyan law, and being caught with them can lead to serious legal consequences, including imprisonment. I do not endorse or condone any illegal behavior.</p>
 
 			<p>If you decide to engage in recreational drug use, especially with synthetic substances like MDMA, it is crucial to use test kits. I've never heard of anyone having any problems with natural drugs like cannabis or psilocybin mushrooms, but synthetic drugs can vary widely in composition and purity levels. Unfortunately, I am unaware of any local sources for reagent test kits in Kenya. It may be advisable to acquire them from abroad and bring them with you when traveling.</p>
 
-			<p>Bush weed, locally cultivated cannabis, is readily available in Nairobi. It is often considered less expensive and of lower quality compared to imported strains. Many recreational drugs in Kenya are indeed imported. In Nairobi, you can easily come across a variety of cannabis, sometimes referred to as bhang or banga, as well as a few strains of psilocybin mushrooms and MDMA. More niche or specialized substances are generally harder to find.</p>
+			<p>Bush weed, locally cultivated cannabis, is readily available. It is often considered less expensive and of lower quality compared to imported strains. Many recreational drugs in Kenya are indeed imported. In Nairobi, you can easily come across a variety of cannabis, sometimes referred to as bhang or banga, as well as a few strains of psilocybin mushrooms and MDMA. More niche or specialized substances are generally harder to find.</p>
 		</section>
 
 		<section id="Safaris">
