--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -163,8 +163,7 @@
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food in downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
-				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite outdoor coworking cafe</li>
-				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/sMDM5bC7bGG427Hy9">Cheche Bookshop and Cafe</a>: my favorite indoor coworking cafe</li>
+				<li><a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>: my favorite coworking cafe</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
@@ -520,6 +519,7 @@
 				<li><a rel="external" target="_blank" href="https://kicc.co.ke/">Kenyatta International Convention Centre</a>: skyscraper with a public roof with a view of the city</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FVXqSwH5jwZMyxCX7">Maasai Market</a>: downtown outdoor marketplace to bargain for Kenyan trinkets like paintings, sculptures, and blankets</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FxdnwYXwYeLLg9816">Toi Market</a>: large marketplace for clothes, groceries, and household items</li>
+				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/sMDM5bC7bGG427Hy9">Cheche Bookshop and Cafe</a>: my favorite bookstore with delicious cookies, and frequent host of <a rel="external" target="_blank" href="https://www.instagram.com/chechebooks/">community events</a></li>
 				<li><a rel="external" target="_blank" href="https://www.giraffecentre.org/">Giraffe Center</a>: feed a giraffe from your hands</li>
 				<li><a rel="external" target="_blank" href="https://visit.sheldrickwildlifetrust.org/">Elephant Orphanage</a>: baby elephants; book weeks in advance or overpay for a tour company like <a rel="external" target="_blank" href="https://gracepattecotourskenya.org/">Gracepatt</a></li>
 				<li><a rel="external" target="_blank" href="https://kws.go.ke/parks/nairobi-national-park">Nairobi National Park</a>: massive safari park in the city with wild lions, giraffes, rhinos, etc.</li>
