podcast and amcham

--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
 				</summary>
 				Public Speaking:
 				<ul>
-					<li>Guest speaker for SolarQuarter's webinar, "Harnessing Solar Energy: The Role of Energy Storage in Off-Grid Solutions" (2024)</li>
+					<li>Panelist on the "Renewable Energy Roundtable" at the American Chamber of Commerce Business Summit, "Catalyzing the Future of U.S.-East Africa Trade and Investment" (2024)</li>
+					<li>Panelist on "I-RECs, P-RECs, D-RECs, R-RECs: Revenue Opportunities for Mini-Grid Companies" episode of INENSUS' <i><a rel="external" href="https://podcast.inensus.com/share" target="_blank">The Mini-Grid Business</a></i> podcast (2024)</li>
+					<li>Panelist on "Harnessing Solar Energy: The Role of Energy Storage in Off-Grid Solutions," a SolarQuarter webinar (2024)</li>
 					<li>Keynote speaker for "Mechanical Engineering Shaping the World" event at the Georgia Institute of Technology (2023)</li>
 					<li>Invited lecturer for "Electric Vehicles and the Grid" course at the Georgia Institute of Technology (2023)</li>
 					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
@@ -292,7 +294,7 @@
 					<li>Keynote speaker at FIRST Robotics international competition (2014)</li>
 					<li>Keynote speaker at No Excuses University national convention (2014)</li>
 					<li>Host of "Tech Talks," a science communication competition, at the Atlanta Science Festival (2014)</li>
-					<li>Opening speaker for the Georgia Tech Freshman Convocation Ceremony [<a aria-label="Video of my Georgia Tech convocation speech" rel="external" href="https://www.youtube.com/watch?v=98nNpzE6gIs" target="_blank">video</a>] (2013)</li>
+					<li>Opening speaker for the <a rel="external" href="https://www.youtube.com/watch?v=98nNpzE6gIs" target="_blank">Georgia Tech Freshman Convocation Ceremony</a> (2013)</li>
 				</ul>
 				Academic Service:
 				<ul>
