MIT research slam

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
 					<li>SolarQuarter 40 Under 40 Class of 2023</li>
 					<li>National Science Foundation Innovation Corps Teams Grant (2020)</li>
 					<li>National Science Foundation Innovation Corps Fusion Grant (2019)</li>
+					<li>Winner of MIT Research Slam (2019)</li>
 					<li>First Place at the MIT Mechanical Engineering Research Exhibition (2019)</li>
 					<li>Graduate Research Fellowship Honorable Mention from the National Science Foundation (2016)</li>
 					<li>Richard K. Whitehead Jr. Memorial Award, awarded to the top three Mechanical Engineering seniors at the Georgia Institute of Technology (2016)</li>
