--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -481,7 +481,7 @@
 
 			<p>Nairobi has good medical care facilities, but you need to practice constant self-advocacy when seeking care. For example, if you've been in a waiting room for 45 minutes when the doctor or nurse told you it would be 15, flag down a nurse and politely ask where the doctor is so you can go find them yourself.</p>
 
-			<p>For most non-urgent medical care, Columbia Africa is my favorite clinic. They have pristine facilities and affordable lab tests. STI testing is expensive in Nairobi, and Columbia Africa have the cheapest prices I've found for comprehensive testing.</p>
+			<p>For most non-urgent medical care and lab tests, <a rel="external" target="_blank" href="https://nwh.co.ke/hospital/">Nairobi Women's Hospital</a> (NWH) is my favorite clinic. They're bad at electronic communication, but the wait time for walk-ins is usually short. Check-in at an electronic kiosk next to the front desk, walk to the waiting area for your appointment type (e.g., for lab testing, walk to the lab itself), and wait to be called.</p>
 
 			<p>For emergency hospital services, I recommend Aga Khan Hospital or MP Shah Hospital.</p>
 
