shaping the world vid and eqr disclaimer

--- a/eqr.html
+++ b/eqr.html
@@ -67,6 +67,8 @@
 
 		<div class="separator"></div>
 
+		<p class="disclaimer">The following is from the <a rel="external" href="https://rupumped.github.io/EQR/" target="_blank">project website</a>.</p>
+
 		<p>It's important to keep certain medical information readily available in case of emergencies. The worst-case scenario of an emergency ambulance response is that the crew knows nothing about the patient. If the patient is unresponsive, emergency responders can only try their best to treat life-threatening signs and symptoms. In an emergency, information can make the difference between life and death.</p>
 
 		<p>People with allergies or medical conditions that affect emergency medical response need to keep information about their condition easily accessible. Some keep <a rel="external" href="http://www.lifeseniorservices.org/images/seniorline/EmergencyMedicalForm.pdf" target="_blank">emergency medical information forms like this one</a>, but lengthy paper forms are a hassle to keep accessible when you leave your home. Patients can <a rel="external" href="https://universalmedicaldata.com/emergency-medical-card/" target="_blank">fit some forms into a wallet</a>, but the cards need to come in packs to contain all of the necessary information and are filled with miniscule font. Others wear <a rel="external" href="https://www.laurenshope.com/" target="_blank">medical ID jewelry like these</a>, but jewelry is expensive and often lacks enough space for everything emergency responders need. There is currently no good solution to communicate all of an unconscious patient's relevant medical information to emergency responders.</p>
