--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 					<li>Panelist on "Challenges and Opportunities in the Development of Mini-Grids in Kenya" at The Solar Week Kenya conference (2024)</li>
 					<li>Panelist on "I-RECs, P-RECs, D-RECs, R-RECs: Revenue Opportunities for Mini-Grid Companies" episode of INENSUS' <i><a rel="external" href="https://podcast.inensus.com/share" target="_blank">The Mini-Grid Business</a></i> podcast (2024)</li>
 					<li>Panelist on "Harnessing Solar Energy: The Role of Energy Storage in Off-Grid Solutions," a SolarQuarter webinar (2024)</li>
-					<li>Keynote speaker for "Mechanical Engineering Shaping the World" event at the Georgia Institute of Technology (2023)</li>
+					<li>Keynote speaker for "<a rel="external" href="https://www.youtube.com/watch?v=sM0IXgB1occ" target="_blank">Mechanical Engineering Shaping the World</a>" event at the Georgia Institute of Technology (2023)</li>
 					<li>Invited lecturer for "Electric Vehicles and the Grid" course at the Georgia Institute of Technology (2023)</li>
 					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
 					<li>Panelist on "Solar and Green Energy as Ways of Harnessing Affordable Energy that is Environmentally Friendly" at the Intergovernmental Authority on Development's Kampala Declaration Forum (2022) </li>
