--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
 				Public Speaking:
 				<ul>
 					<li>Panelist on the "Renewable Energy Roundtable" at the American Chamber of Commerce Business Summit, "Catalyzing the Future of U.S.-East Africa Trade and Investment" (2024)</li>
+					<li>Keynote speaker at the Africa Mini-Grid Developers Association "Innovation Exchange Forum" (2024)</li>
 					<li>Panelist on "Challenges and Opportunities in the Development of Mini-Grids in Kenya" at The Solar Week Kenya conference (2024)</li>
 					<li>Panelist on "I-RECs, P-RECs, D-RECs, R-RECs: Revenue Opportunities for Mini-Grid Companies" episode of INENSUS' <i><a rel="external" href="https://podcast.inensus.com/share" target="_blank">The Mini-Grid Business</a></i> podcast (2024)</li>
 					<li>Panelist on "Harnessing Solar Energy: The Role of Energy Storage in Off-Grid Solutions," a SolarQuarter webinar (2024)</li>
