minor kenya updates

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -368,7 +368,7 @@
 			<p>A lot of foreigners have the combination of a Schwab bank account and a Chase Sapphire Reserve credit card. Schwab reimburses all ATM fees. The CSR has a hefty fee, but there is a great reimbursement of some amount of travel costs that can quickly make up for it, plus airport lounge access all over the world, and no international transaction fees. I do all my banking with Chase, which has similar benefits to Schwab.</p>
 
 			<h3>Local Currency</h3>
-			<p>Kenya's currency is the shilling, abbreviated KES or KSH, a holdover from British colonial days. At the time of writing, the exchange rate is about 135 KES/USD, meaning about 75% of the price in shillings is the price in U.S. cents. That said, the value of the shilling relative to the dollar has been falling quickly over the past few years, so check online for <a rel="external" target="_blank" href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=KES">the current exchange rate</a>.</p>
+			<p>Kenya's currency is the shilling, abbreviated KES or KSH, a holdover from British colonial days. At the time of writing, the exchange rate is about 135 KES/USD, meaning about 75% of the price in shillings is the price in U.S. cents. That said, the value of the shilling relative to the dollar has been changing quickly over the past few years, so check online for <a rel="external" target="_blank" href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=KES">the current exchange rate</a>.</p>
 
 			<p>You do not need to worry about currency black markets in Kenya; the central bank does not peg the value of the shilling to any other currency. In Kenya, the best exchange rates you'll find are in forex counters in malls, and they won't be much better than those at the airport. This will not always be the case for other countries in Africa, so be sure to research central bank and parallel market exchange rates before traveling outside of Kenya. For more information, read up on the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Impossible_trinity">impossible trinity</a>.</p>
 
@@ -602,7 +602,7 @@
 			</figure>
 
 			<h3>Parks</h3>
-			<p>I have visited four safari parks in Kenya:</p>
+			<p>I have been on four safaris in Kenya:</p>
 			<ul>
 				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Maasai_Mara">Maasai Mara</a></b> is arguably the most famous park in Kenya. It's name comes from the Maa word for "spotted," a reference to the short trees that cover the park. The Mara is located on the southern border of Kenya, directly connected to the Serengeti in Tanzania. The park hosts the <a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Serengeti#Great_migration">Great Migration</a>, one of the Wonders of the World, annually. Upside: in my opinion, the Maasai Mara is the best park for spotting game. Downside: due to its popularity, it can get a little crowded, and the park rangers fail to stop the safari drivers from going off road.</li>
 				<li><b><a rel="external" target="_blank" href="https://en.wikipedia.org/wiki/Amboseli_National_Park">Amboseli</a></b> is another Maasai park on Kenya's southern border. The name is a corruption of the Maasai word for "salty, dusty place." Upside: Amboseli is famous for its "tuskers," elephants with massive tusks, and its views of Mount Kilimanjaro are breathtaking. Downside: none.</li>
